Add users and implement repository methods