@@ -1,6 +1,7 @@
 package com.draekk.springboot.springbootusersapi.repositories;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import com.draekk.springboot.springbootusersapi.models.Account;
@@ -10,12 +11,13 @@ import com.draekk.springboot.springbootusersapi.models.dtos.UserDto;
 
 public class UserRepositoryImpl implements IUserRepository {
 
-    private List<User> users = List.of(
+    private List<User> users = new ArrayList<>(Arrays.asList(
         new User(1L, "311513-2", "Gever", "Rodríguez", new Account(1L, "drakkseid", "THEHELL9000."), "rodriver1992@gmail.com", new Address(1L, "Jehova Yireh 1161", "Curacaví", "Chile")),
-        new User(1L, "311513-2", "Andrea", "Rodríguez", new Account(1L, "drakkseid", "THEHELL9000."), "rodriver1992@gmail.com", new Address(1L, "Jehova Yireh 1161", "Curacaví", "Chile")),
-                    new User(2L, "235624-1", "Laura", "Peralta", new Account(2L, "aluranyx", "qrgqrgjri3."), "alura.peralta.02@gmail.com", new Address(2L, "Jehova Yireh 1161", "Curacaví", "Chile")),
-                    new User(3L, "235624-1", "Andres", "Peralta", new Account(3L, "aluranyx", "qrgqrgjri3."), "andres@correo.cl", new Address(3L, "Jehova Yireh 1161", "Curacaví", "Chile"))
-        );
+        new User(2L, "235624-1", "Laura", "Peralta", new Account(2L, "aluranyx", "qrgqrgjri3."), "alura.peralta.02@gmail.com", new Address(2L, "Jehova Yireh 1161", "Curacaví", "Chile")),
+        new User(3L, "237624-1", "Andres", "Peralta", new Account(3L, "aluranyx", "qrgqrgjri3."), "andres@correo.cl", new Address(3L, "Jehova Yireh 1161", "Curacaví", "Chile")),
+        new User(4L, "314513-2", "Andrea", "Rodríguez", new Account(1L, "drakkseid", "THEHELL9000."), "rodriver1992@gmail.com", new Address(1L, "Jehova Yireh 1161", "Curacaví", "Chile")),
+        new User(5L, "144513-2", "Pablo", "Bustamante", new Account(1L, "pblb", "THEHELL9000."), "rodriver1992@gmail.com", new Address(1L, "Jehova Yireh 1161", "Curacaví", "Chile"))
+    ));
 
     @Override
     public void save(User user) {
@@ -70,14 +72,18 @@ public class UserRepositoryImpl implements IUserRepository {
 
     @Override
     public int count() {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'count'");
+        return users.size();
     }
 
     @Override
     public Long nextId() {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'nextId'");
+        Long maxId = 0L;
+        for(User user : users){
+            if(user.getId() > maxId) {
+                maxId = user.getId();
+            }
+        }
+        return maxId + 1L;
     }
 
 }
